sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: unclosed character literal
  java.lang.string('ok');
                      ^AlgBubbleSort1:4: error: ')' expected but something found.
  java.lang.string('ok');
                      ^